[package]
name = "oxycap"
version = "0.1.0"
authors = ["jedel1043 <jedel0124@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "0.7.0"
chrono = "0.4.15"
ux = "0.1.3"
thiserror = "1.0.20"
anyhow = "1.0.32"
structopt = "0.3.17"
prettytable-rs = "0.8"
